# stm32f7_scope

./: .gitignore  CMakeLists.txt  README.md  build.sh  open_project.sh
31_asw_f7/: CMakeLists.txt
31_asw_f7/01_bsp/: CMakeLists.txt
31_asw_f7/01_bsp/cmsis/: CMakeLists.txt
31_asw_f7/01_bsp/f7-disco-bsp/: CMakeLists.txt
31_asw_f7/01_bsp/hal/: CMakeLists.txt
31_asw_f7/01_bsp/hal/stm32f7xx-hal-driver-master/Inc/Config/: stm32f7xx_hal_conf.h
31_asw_f7/10_os/: CMakeLists.txt
31_asw_f7/30_main/: CMakeLists.txt
31_asw_f7/30_main/Inc/: usb_otg.h
31_asw_f7/30_main/Src/: gpio.c  ltdc.c  sdmmc.c  spi.c  usb_otg.c
31_asw_f7/70_lib/: CMakeLists.txt
90_config/10_linker/: stm32h755xx_flash_CM4.ld  stm32h755xx_flash_CM7.ld
90_config/20_svd/: howto.md
90_config/30_openocd/: readme.md
99_build/cmake/: compile-options.cmake  gcc-arm-none-eabi.cmake
